force-app/main/default/objects/Truck_for_Store__c/Truck_for_Store__c.object-meta.xml
<CustomObject>
    <label>Truck for Store</label>
    <nameField>
        <displayFormat>TFS-{0000000}</displayFormat>
        <label>TFS ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trucks for Store</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>