force-app/main/default/objects/Truck_for_Store__c/fields/Account_for_Dealer_Link__c.field-meta.xml
<CustomField>
    <fullName>Account_for_Dealer_Link__c</fullName>
    <formula>HYPERLINK(Left($Api.Enterprise_Server_URL_190,(find(&apos;/services&apos;,$Api.Enterprise_Server_URL_190))) + Store__r.Id, &apos;Link to Dealer Account&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account for Dealer Link</label>
    <type>Text</type>
</CustomField>