force-app/main/default/objects/Truck_for_Store__c/fields/Account_for_Truck__c.field-meta.xml
<CustomField>
    <fullName>Account_for_Truck__c</fullName>
    <description>Account Related to this Truck.</description>
    <formula>Store__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account Related to this Truck.</inlineHelpText>
    <label>Account for Truck</label>
    <type>Text</type>
</CustomField>