force-app/main/default/objects/Truck_for_Store__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Trucks_for_Store</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>