force-app/main/default/objects/Truck_for_Store__c/fields/Truck__c.field-meta.xml
<CustomField>
    <fullName>Truck__c</fullName>
    <label>Truck</label>
    <referenceTo>Truck__c</referenceTo>
    <relationshipLabel>Stores for Trucks</relationshipLabel>
    <relationshipName>Stores_for_Trucks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>