force-app/main/default/objects/Truck_for_Store__c/fields/Truck_Description__c.field-meta.xml
<CustomField>
    <fullName>Truck_Description__c</fullName>
    <formula>Truck__r.Truck_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Truck Description</label>
    <type>Text</type>
</CustomField>