force-app/main/default/objects/Truck_for_Store__c/fields/Truck_Inactivated_Date__c.field-meta.xml
<CustomField>
    <fullName>Truck_Inactivated_Date__c</fullName>
    <formula>Truck__r.Date_Truck_Inactivated__c</formula>
    <label>Truck Inactivated Date</label>
    <type>Date</type>
</CustomField>