force-app/main/default/objects/Truck_for_Store__c/fields/Truck_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Truck_Is_Active__c</fullName>
    <formula>Truck__r.IsActive__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Truck Is Active</label>
    <type>Checkbox</type>
</CustomField>