force-app/main/default/objects/Truck_for_Store__c/fields/Truck_Link__c.field-meta.xml
<CustomField>
    <fullName>Truck_Link__c</fullName>
    <description>This field is used to provide the Truck URL link for Email Templates.</description>
    <formula>HYPERLINK(Left($Api.Enterprise_Server_URL_190,(find(&apos;/services&apos;,$Api.Enterprise_Server_URL_190))) + Truck__r.Id, &apos;Link to Truck&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used to provide the Truck URL link for Email Templates.</inlineHelpText>
    <label>Truck Link</label>
    <type>Text</type>
</CustomField>