force-app/main/default/objects/Truck_for_Store__c/fields/Truck_Status__c.field-meta.xml
<CustomField>
    <fullName>Truck_Status__c</fullName>
    <formula>IF(Truck__r.IsActive__c, &quot;Active&quot;, &quot;Inactive&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Truck Status</label>
    <type>Text</type>
</CustomField>