force-app/main/default/objects/Truck_for_Store__c/fields/Truck_Unit_Nbr__c.field-meta.xml
<CustomField>
    <fullName>Truck_Unit_Nbr__c</fullName>
    <description>Truck Unit Number needed for lookups</description>
    <formula>Truck__r.Unit_Number__c</formula>
    <inlineHelpText>Truck Unit Number</inlineHelpText>
    <label>Truck Unit Nbr</label>
    <type>Text</type>
</CustomField>